# Gamenge-Renderer

./: .gitignore  CMakeLists.txt  CREDITS  Doxyfile.in  LICENSE  README.md
cmake/: CodeCoverage.cmake  Findassimp.cmake  GoogleTest-CMakeLists.txt.in  RendererConfig.cmake.in
source/inc/gamenge/common/: common.hpp
source/inc/gamenge/renderer/: camera.h  camera.hpp  mesh_data.h  mesh_data.hpp  renderable.h  renderable.hpp  renderer.h  renderer.hpp  shader_data.h  shader_data.hpp  texture_data.h  texture_data.hpp
source/src/: camera.cpp  mesh_data.cpp  renderable.cpp  renderer.cpp  shader_data.cpp  texture_data.cpp
test/: CMakeLists.txt
test/data/: test_fragment_shader.frag  test_vertex_shader.vert
test/src/: camera_test.cpp  main.cpp  main_test.cpp  mesh_data_test.cpp  renderable_test.cpp  renderer_test.cpp  shader_data_test.cpp  texture_data_test.cpp
